exports[`Tournaments Component should handle no props passed to it 1`] = `
<Carousel
  activeIndex={1}
  bsClass="carousel"
  controls={true}
  direction={null}
  indicators={true}
  interval={5000}
  nextIcon={
    <Glyphicon
      bsClass="glyphicon"
      glyph="chevron-right" />
  }
  nextLabel="Next"
  onSelect={[Function]}
  pauseOnHover={true}
  prevIcon={
    <Glyphicon
      bsClass="glyphicon"
      glyph="chevron-left" />
  }
  prevLabel="Previous"
  slide={true}
  wrap={true}>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <ListGroup
      bsClass="list-group"
      className="tournament-list" />
    <CarouselCaption
      bsClass="carousel-caption"
      componentClass="div">
      <h3>
        Finished Tournaments
      </h3>
    </CarouselCaption>
  </CarouselItem>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <ListGroup
      bsClass="list-group"
      className="tournament-list" />
    <CarouselCaption
      bsClass="carousel-caption"
      componentClass="div">
      <h3>
        OnGoing Tournaments
      </h3>
    </CarouselCaption>
  </CarouselItem>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <Connect(CreateTournament) />
  </CarouselItem>
</Carousel>
`;

exports[`Tournaments Component should match snapshot 1`] = `
<Carousel
  activeIndex={1}
  bsClass="carousel"
  controls={true}
  direction={null}
  indicators={true}
  interval={5000}
  nextIcon={
    <Glyphicon
      bsClass="glyphicon"
      glyph="chevron-right" />
  }
  nextLabel="Next"
  onSelect={[Function]}
  pauseOnHover={true}
  prevIcon={
    <Glyphicon
      bsClass="glyphicon"
      glyph="chevron-left" />
  }
  prevLabel="Previous"
  slide={true}
  wrap={true}>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <ListGroup
      bsClass="list-group"
      className="tournament-list">
      <Tournament
        tournament={
          Object {
            "createdAt": "2016-12-25T19:31:48",
            "gamesPlayed": 1,
            "id": 2,
            "name": "new",
            "totalGames": 1,
            "updatedAt": "2016-12-26T19:31:48",
            "winner": 2,
          }
        } />
    </ListGroup>
    <CarouselCaption
      bsClass="carousel-caption"
      componentClass="div">
      <h3>
        Finished Tournaments
      </h3>
    </CarouselCaption>
  </CarouselItem>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <ListGroup
      bsClass="list-group"
      className="tournament-list">
      <Tournament
        tournament={
          Object {
            "createdAt": "2016-12-25T19:31:48",
            "gamesPlayed": 0,
            "id": 1,
            "name": "Super Tourney!",
            "totalGames": 3,
            "updatedAt": null,
            "winner": null,
          }
        } />
      <Tournament
        tournament={
          Object {
            "createdAt": "2016-12-25T19:31:48",
            "gamesPlayed": 5,
            "id": 3,
            "name": "next",
            "totalGames": 5,
            "updatedAt": null,
            "winner": null,
          }
        } />
      <Tournament
        tournament={
          Object {
            "createdAt": "2016-12-25T19:31:48",
            "gamesPlayed": 1,
            "id": 4,
            "name": "hot",
            "totalGames": 7,
            "updatedAt": null,
            "winner": null,
          }
        } />
      <Tournament
        tournament={
          Object {
            "createdAt": "2016-12-25T19:31:48",
            "gamesPlayed": 2,
            "id": 5,
            "name": "fun",
            "totalGames": 6,
            "updatedAt": null,
            "winner": null,
          }
        } />
    </ListGroup>
    <CarouselCaption
      bsClass="carousel-caption"
      componentClass="div">
      <h3>
        OnGoing Tournaments
      </h3>
    </CarouselCaption>
  </CarouselItem>
  <CarouselItem
    active={false}
    animateIn={false}
    animateOut={false}>
    <Connect(CreateTournament) />
  </CarouselItem>
</Carousel>
`;
